force-app/main/default/objects/G100_Network_Onboarding__c/G100_Network_Onboarding__c.object-meta.xml
<CustomObject>
    <description>Tracking the onboarding process for g100 network members</description>
    <label>G100 Network Onboarding</label>
    <nameField>
        <label>G100 Network Onboarding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G100 Network Onboarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>