force-app/main/default/objects/G100_Network_Onboarding__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>G100 Network Onboarding</relationshipLabel>
    <relationshipName>G100_Network_Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>