force-app/main/default/objects/G100_Network_Onboarding__c/fields/Calendar_Received__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calendar Received</label>
    <type>Checkbox</type>
</CustomField>