force-app/main/default/objects/G100_Network_Onboarding__c/fields/Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received__c</fullName>
    <label>Contract Received</label>
    <type>Date</type>
</CustomField>