force-app/main/default/objects/G100_Network_Onboarding__c/fields/Enrollment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Received_Date__c</fullName>
    <description>Enter the date the enrollment form was received.</description>
    <inlineHelpText>Enter the date the enrollment form was received.</inlineHelpText>
    <label>Enrollment Received Date</label>
    <type>Date</type>
</CustomField>