force-app/main/default/objects/G100_Network_Onboarding__c/fields/Expected_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Graduation_Date__c</fullName>
    <formula>Member__r.NGL_Graduation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Graduation Date</label>
    <type>Date</type>
</CustomField>