force-app/main/default/objects/G100_Network_Onboarding__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>G100 Network Onboarding</relationshipLabel>
    <relationshipName>G100_Network_Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>