force-app/main/default/objects/G100_Network_Onboarding__c/fields/Manager_EA_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_EA_Email__c</fullName>
    <formula>Manager__r.Assistant_1_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager EA Email</label>
    <type>Text</type>
</CustomField>