force-app/main/default/objects/G100_Network_Onboarding__c/fields/Manager_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Manager_Survey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Survey Completed</label>
    <type>Checkbox</type>
</CustomField>