force-app/main/default/objects/G100_Network_Onboarding__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>G100 Network Onboarding</relationshipLabel>
    <relationshipName>G100_Network_Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>