force-app/main/default/objects/G100_Network_Onboarding__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <formula>Meeting__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>