force-app/main/default/objects/G100_Network_Onboarding__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>G100 Network Onboarding (Member)</relationshipLabel>
    <relationshipName>G100_Network_Onboarding2</relationshipName>
    <type>Lookup</type>
</CustomField>