force-app/main/default/objects/G100_Network_Onboarding__c/fields/Member_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Account_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Account Name</label>
    <type>Text</type>
</CustomField>