force-app/main/default/objects/G100_Network_Onboarding__c/fields/Member_EA_Email__c.field-meta.xml
<CustomField>
    <fullName>Member_EA_Email__c</fullName>
    <formula>Member__r.Assistant_1_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member EA Email</label>
    <type>Text</type>
</CustomField>