force-app/main/default/objects/G100_Network_Onboarding__c/fields/Member_EA_Phone__c.field-meta.xml
<CustomField>
    <fullName>Member_EA_Phone__c</fullName>
    <formula>Member__r.Assistant_1__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member EA Phone #</label>
    <type>Text</type>
</CustomField>