force-app/main/default/objects/G100_Network_Onboarding__c/fields/Member_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Last_Name__c</fullName>
    <formula>Member__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Last Name</label>
    <type>Text</type>
</CustomField>