force-app/main/default/objects/G100_Network_Onboarding__c/fields/Member_Onboarding_Call__c.field-meta.xml
<CustomField>
    <fullName>Member_Onboarding_Call__c</fullName>
    <label>Member Onboarding Call</label>
    <type>Date</type>
</CustomField>