force-app/main/default/objects/G100_Network_Onboarding__c/fields/Member_Phone__c.field-meta.xml
<CustomField>
    <fullName>Member_Phone__c</fullName>
    <formula>Member__r.Phone</formula>
    <label>Member Phone #</label>
    <type>Text</type>
</CustomField>