force-app/main/default/objects/G100_Network_Onboarding__c/fields/Member_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Member_Survey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Survey Completed</label>
    <type>Checkbox</type>
</CustomField>