force-app/main/default/objects/G100_Network_Onboarding__c/fields/Member_Title__c.field-meta.xml
<CustomField>
    <fullName>Member_Title__c</fullName>
    <formula>Member__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Title</label>
    <type>Text</type>
</CustomField>