force-app/main/default/objects/G100_Network_Onboarding__c/fields/Member_Welcome_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Welcome_Email_Status__c</fullName>
    <label>Member Welcome Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Welcome_Email_Status</valueSetName>
    </valueSet>
</CustomField>