force-app/main/default/objects/G100_Network_Onboarding__c/fields/Mentoring__c.field-meta.xml
<CustomField>
    <fullName>Mentoring__c</fullName>
    <label>Mentoring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Considering</fullName>
            </value>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Not Included</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>