force-app/main/default/objects/G100_Network_Onboarding__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>G100 Network Onboarding</relationshipLabel>
    <relationshipName>G100_Network_Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>