force-app/main/default/objects/G100_Network_Onboarding__c/fields/Photo_Bio__c.field-meta.xml
<CustomField>
    <fullName>Photo_Bio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo &amp; Bio</label>
    <type>Checkbox</type>
</CustomField>