force-app/main/default/objects/G100_Network_Onboarding__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>G100 Network Onboarding (Sponsor)</relationshipLabel>
    <relationshipName>G100_Network_Onboarding1</relationshipName>
    <type>Lookup</type>
</CustomField>