force-app/main/default/objects/G100_Network_Onboarding__c/fields/Sponsor_EA_Email__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_EA_Email__c</fullName>
    <formula>Sponsor__r.Assistant_1_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor EA Email</label>
    <type>Text</type>
</CustomField>