force-app/main/default/objects/G100_Network_Onboarding__c/fields/Sponsor_Email__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Email__c</fullName>
    <formula>Sponsor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor Email</label>
    <type>Text</type>
</CustomField>