force-app/main/default/objects/G100_Network_Onboarding__c/fields/Sponsor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_First_Name__c</fullName>
    <formula>Sponsor__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor First Name</label>
    <type>Text</type>
</CustomField>