force-app/main/default/objects/G100_Network_Onboarding__c/fields/Sponsor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Last_Name__c</fullName>
    <formula>Sponsor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor Last Name</label>
    <type>Text</type>
</CustomField>