force-app/main/default/objects/G100_Network_Onboarding__c/fields/Sponsor_Onbaording_Call__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Onbaording_Call__c</fullName>
    <label>Sponsor Onbaording Call</label>
    <type>Date</type>
</CustomField>