force-app/main/default/objects/G100_Network_Onboarding__c/fields/Sponsor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Phone__c</fullName>
    <formula>Sponsor__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor Phone #</label>
    <type>Text</type>
</CustomField>