force-app/main/default/objects/G100_Network_Onboarding__c/fields/Sponsor_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Survey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sponsor Survey Completed</label>
    <type>Checkbox</type>
</CustomField>