force-app/main/default/objects/G100_Network_Onboarding__c/fields/Sponsor_Title__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Title__c</fullName>
    <formula>Sponsor__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor Title</label>
    <type>Text</type>
</CustomField>