force-app/main/default/objects/G100_Network_Onboarding__c/fields/Sponsor_Welcome_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Welcome_Email_Status__c</fullName>
    <label>Sponsor Welcome Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Welcome_Email_Status</valueSetName>
    </valueSet>
</CustomField>