force-app/main/default/objects/G100_Network_Onboarding__c/fields/Website_Access_Setup__c.field-meta.xml
<CustomField>
    <fullName>Website_Access_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Website Access Setup</label>
    <type>Checkbox</type>
</CustomField>