force-app/main/default/objects/G100_Network_Onboarding__c/recordTypes/Exec_Network.recordType-meta.xml
<RecordType>
    <fullName>Exec_Network</fullName>
    <active>true</active>
    <label>Exec Network</label>
</RecordType>