force-app/main/default/objects/G100_Network_Onboarding__c/recordTypes/NGL.recordType-meta.xml
<RecordType>
    <fullName>NGL</fullName>
    <active>true</active>
    <label>NGL</label>
</RecordType>