force-app/main/default/objects/G100_Network_Onboarding__c/recordTypes/TC.recordType-meta.xml
<RecordType>
    <fullName>TC</fullName>
    <active>true</active>
    <label>TC</label>
</RecordType>