force-app/main/default/objects/G100_Network_Onboarding__c/recordTypes/WLA.recordType-meta.xml
<RecordType>
    <fullName>WLA</fullName>
    <active>true</active>
    <label>WLA</label>
</RecordType>