force-app/main/default/objects/G100_Network_Onboarding__c/recordTypes/WLN.recordType-meta.xml
<RecordType>
    <fullName>WLN</fullName>
    <active>true</active>
    <label>WLN</label>
</RecordType>