force-app/main/default/objects/G100_Network_Onboarding__c/listViews/Exec_Network.listView-meta.xml
<ListView>
    <fullName>Exec_Network</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Member__c</columns>
    <columns>Manager__c</columns>
    <columns>Sponsor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Exec Network -</value>
    </filters>
    <label>Exec Network</label>
</ListView>