force-app/main/default/objects/G100_Network_Onboarding__c/listViews/NGL.listView-meta.xml
<ListView>
    <fullName>NGL</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Member__c</columns>
    <columns>Manager__c</columns>
    <columns>Sponsor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>NGL -</value>
    </filters>
    <filters>
        <field>Meeting__c</field>
        <operation>contains</operation>
        <value>2019</value>
    </filters>
    <label>NGL</label>
</ListView>